fix(footer): :bug: fix footer not being displayed correctly on iOS phones

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,11 +24,16 @@
 // Animations
 @import './assets/styles/animations.scss';
 
+html {
+  height: -webkit-fill-available;
+}
+
 body {
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
   font-family: 'Montserrat', sans-serif;
+  display: flex;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
 }
 
 @layer base {
